<resources>
    <string name="app_name">芝士电台</string>
    <string name="group_button1">芝士派</string>
    <string name="group_button2">芝士闹钟</string>
    <string name="group_button3">芝士圈</string>
    <string name="group_button4">我的芝士</string>
    <string name="out">退出</string>
    <string name="home_search_text">请输入关键字</string>
    <string name="edit_name_hint">1-20个字符，可由汉字、数字、字母、“_”组成</string>
    <string name="follow">关注</string>
    <string name="select_city">请选择省份.城市.地区</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_new_phone">请输入新手机号码</string>

    <string name="select_age">请选择年龄段</string>
    <string name="select_course">请选择课程套餐</string>
    <string name="course_package">课程套餐</string>
    <string name="ages">课程年龄段</string>
    <string name="address">家庭住址</string>
    <string name="phone">联系电话</string>
    <string name="mobile_number">手机号码</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="pay_for">支付方式</string>
    <string name="skip">跳过</string>
    <string name="select_sex">选择性别</string>
    <string name="better_service_for_you">更好的为您提供服务</string>
    <string name="boy">男孩</string>
    <string name="girl">女孩</string>
    <string name="four_five">4~5</string>
    <string name="six_seven">6~8</string>
    <string name="group_info">专辑详情</string>
    <string name="brief_introduction">简介</string>
    <string name="story">故事</string>
    <string name="search">搜索</string>
    <string name="baby_birth">宝宝生日</string>
    <string name="nickName">昵称</string>
    <string name="save">保存</string>
    <string name="input_msg">请输入短信验证码</string>
    <string name="sun">日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="subscribe">关注</string>
    <string name="data">资料</string>
    <string name="product">作品</string>
    <string name="close">关闭</string>
    <string name="my_collection">我的收藏</string>
    <string name="service_centre">服务中心</string>
    <string name="my_course">我的课程</string>
    <string name="my_work">我的作品</string>
    <string name="my_message">我的消息</string>
    <string name="system_message">系统通知</string>
    <string name="message_details">消息详情</string>
    <string name="check_details">查看详情>></string>
    <string name="wx_pay">微信支付</string>
    <string name="price">价格:</string>
    <string name="enroll">报名</string>
    <string name="course_details">课程详情</string>
    <string name="order">预 约</string>
    <string name="book_msg">预约通知</string>
    <string name="class_msg">上课通知</string>
    <string name="vip_msg">会员通知</string>
    <string name="umeng_key">5ac4c20fb27b0a077b0001e6</string>
    <string name="umeng_wechat_AppID_old">wxc34b4cea4106230e</string>
    <string name="umeng_wechat_AppSecret_old">77f59ea225f35a7a7477e02dead86fae</string>
    <string name="wechat_AppID_old">wxc7a1365f522a3dcf</string>
    <string name="wechat_AppSecret_old">mmIUCtKU79LqkdGNg4sLjnkNn8Har489</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="service_telephone">客服电话</string>
    <string name="service_centre_number">0574-87788656</string>
    <string name="service_centre_phone">18868986986</string>
    <string name="the_hours_worked">工作时间：10:00-21:00</string>
    <string name="wx_public_platform">微信公众号：zhishidiantai</string>
    <string name="class_ad">上课地址</string>
    <string name="select_class_ad">请选择上课地址</string>
    <string name="un_read">未读</string>
    <string name="touch_go">点击开启</string>
    <string name="safe_center">安全中心</string>
    <string name="wechat_string">微信</string>
    <string name="qq_string">QQ</string>
    <string name="weibo_string">微博</string>
    <string name="change">更换</string>
    <string name="binding">绑定</string>
    <string name="submit">提交</string>
    <string name="sms_tip">注意接收，验证码</string>
    <string name="bind_phone">换绑手机</string>
    <string name="now_enroll">立即报名</string>
    <string name="empty">没有更多内容</string>
    <string name="td_app_id">856F710037234C07A36CA8B04A96F28C</string>
    <string name="td_app_channel" >cheese_td_channel</string>
    <string name="new_update">发现新版本</string>
    <string name="dont_update">稍后再说</string>
    <string name="update">立即更新</string>
    <string name="baby_name">宝贝姓名</string>
    <string name="parent_name">家长姓名</string>
    <string name="teacher_name">指导老师</string>
    <string name="unnecessarily">非必填</string>
    <string name="cheese_circle">芝士圈</string>
    <string name="details">详情</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_mobile">请输入手机号码</string>
    <string name="activity_enroll">活动报名</string>
    <string name="cheese_clock">芝士闹钟</string>
    <string name="look">查看</string>
    <string name="have_enroll_tip">已经报名，请勿重复报名</string>
    <string name="un_enroll_tip">请先报名再预约课程</string>
    <string name="goto_book">去预约</string>
    <string name="have_book">已经报名了</string>
    <string name="please_enter_the_baby_name">请输入宝贝姓名</string>
    <string name="please_enter_parent_name">请输入家长姓名</string>
    <string name="please_enter_gender">请输入性别</string>
    <string name="please_enter_your_birthday">请输入生日</string>
    <string name="next">下一首</string>
    <string name="last">上一首</string>
    <string name="login_with_code">使用验证码登录</string>
    <string name="login_with_password">使用密码登录</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="commit">提交</string>
    <string name="input_code">请输入验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="get_code">获取验证码</string>
    <string name="modify_password">修改密码</string>
    <string name="upload">上传</string>
    <string name="not_found_msg">没有找到相关的故事哦～</string>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
</resources>
