<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.cheese.radio.ui.user.register.one.RegisterOneModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="15dp"
            android:text="@string/skip"
            android:onClick="@{vm::onSkipClick}"
            android:textSize="13.44dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="29dp"
            android:text="@string/select_sex"
            android:textColor="@color/text_black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:text="@string/better_service_for_you"
            android:textSize="13.44dp" />

        <com.binding.model.view.radio.CheckRadioGroup
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                style="@style/sex_select_radio_button_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:layout_marginRight="33dp"
                android:checked="false"
                android:drawableTop="@drawable/boy_select"
                android:onClick="@{vm::onSelectSexClick}"
                android:text="@string/boy" />

            <RadioButton
                style="@style/sex_select_radio_button_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableTop="@drawable/girl_select"
                android:onClick="@{vm::onSelectSexClick}"
                android:text="@string/girl" />
        </com.binding.model.view.radio.CheckRadioGroup>

        <Button
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="64.33dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/register_next"
            android:onClick="@{vm::onGoToTwoClick}"
            android:visibility="@{vm.checkView?View.VISIBLE:View.GONE}" />
    </LinearLayout>
</layout>