<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.cheese.radio.ui.user.safe.SafeModel" />
        <import type="android.view.View"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_gray"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="53.2dp"
                android:layout_marginTop="18.6dp"
                android:background="@color/background_white">



                <TextView
                    style="@style/safe_item_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mobile_number" />
                <Button
                    style="@style/safe_item_button"
                    android:layout_width="51.33dp"
                    android:layout_height="25.2dp"
                    android:onClick="@{vm::onPhoneClick}"
                    android:visibility="@{vm.havaPhoneNumber?View.GONE:View.VISIBLE}"
                    android:text="@string/change" />
                <TextView
                    android:layout_gravity="center|end"
                    android:layout_width="wrap_content"
                    android:layout_height="25.2dp"
                    android:gravity="center"
                    android:layout_marginRight="28dp"
                    android:text="@{vm.phoneNumber,default=12345678901}"
                    android:visibility="@{vm.havaPhoneNumber?View.VISIBLE:View.GONE}" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="53.2dp"
                android:background="@color/background_white">

                <Button
                    style="@style/safe_item_button"
                    android:layout_width="51.33dp"
                    android:layout_height="25.2dp"
                    android:text="@string/binding" />

                <TextView
                    style="@style/safe_item_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wechat_string" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="53.2dp"
                android:background="@color/background_white">

                <Button
                    style="@style/safe_item_button"
                    android:layout_width="51.33dp"
                    android:layout_height="25.2dp"
                    android:text="@string/binding" />

                <TextView
                    style="@style/safe_item_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/qq_string" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="53.2dp"
                android:background="@color/background_white">

                <Button
                    style="@style/safe_item_button"
                    android:layout_width="51.33dp"
                    android:layout_height="25.2dp"
                    android:text="@string/binding" />

                <TextView
                    style="@style/safe_item_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weibo_string" />
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>
</layout>