<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.cheese.radio.ui.user.register.two.RegisterTwoModel" />
        <import type="android.view.View"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="15dp"
                android:text="@string/skip"
                android:onClick="@{vm::onSkipClick}"
                android:textColor="@color/text_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="29dp"
                android:text="@string/select_age"
                android:textColor="@color/text_black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:text="@string/better_service_for_you"
                android:textSize="13.44dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/select_for"
                        style="@style/activity_register_two_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{vm::onSeleckAgeClick}"
                        android:text="@string/four_five" />

                    <TextView
                        android:id="@+id/select_six"
                        style="@style/activity_register_two_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{vm::onSeleckAgeClick}"
                        android:text="@string/six_seven" />
                </LinearLayout>
            </FrameLayout>

            <Button
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="64.33dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/register_next"
                android:onClick="@{vm::onNextClick}"
                android:visibility="@{vm.checkView?View.VISIBLE:View.INVISIBLE}" />

        </LinearLayout>
    </FrameLayout>
</layout>